Fix popup visibility and placement issues

--- a/client/src/Components/Lobby/Styles/LobbyPopup.css
+++ b/client/src/Components/Lobby/Styles/LobbyPopup.css
@@ -1,6 +1,7 @@
 #lobby{
     display: flex;
-    align-content: center;
+    align-content: space-evenly;
+    justify-content: space-evenly;
     flex-flow: column wrap;
     width: 60vw;
     min-width: 500px;
@@ -39,11 +40,17 @@
     outline: none;
 }
 
+#room-code-input {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 10px;
+}
+
 #room-code-input input{
     background-color: var(--sub-color-transparent);
     border: none;
     height: 30px;
-    width: 50%;
+    width: 70%;
     border-radius: 20px;
     font-size: 1.2em;
     padding: 10px;
@@ -54,8 +61,7 @@
     font-size: 1.2em;
     border: none;
     background-color: var(--accent-color);
-    margin: 20px;
-    padding: 10px;
+    padding: 0 10px;
     border-radius: 20px;
 }
 
