--- a/client/src/Pages/Styles/Lobby.css
+++ b/client/src/Pages/Styles/Lobby.css
@@ -151,6 +151,6 @@
     max-height: 50px;
 }
 
-#practice #popup-root{
+#practice > #popup-root:has(>div.popup-overlay>div.popup-content>div#solo-game-result){
     visibility: hidden;
 }
